--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "node-sass": "^4.10.0",
     "sass-loader": "^7.1.0",
     "vue": "^2.5.16",
+    "vue-class-component": "^6.3.2",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
