--- a/package.json
+++ b/package.json
@@ -1,117 +1,36 @@
 {
-  "name": "electron-vue-typescript-starter",
-  "version": "0.0.0",
-  "author": "Francois Wouts <f@zenc.io>",
-  "description": "An electron-vue project",
-  "license": "MIT",
-  "main": "./dist/electron/main.js",
-  "scripts": {
-    "build": "node .electron-vue/build.js && electron-builder",
-    "build:dir": "node .electron-vue/build.js && electron-builder --dir",
-    "build:clean": "cross-env BUILD_TARGET=clean node .electron-vue/build.js",
-    "build:web": "cross-env BUILD_TARGET=web node .electron-vue/build.js",
-    "dev": "node .electron-vue/dev-runner.js",
-    "e2e": "yarn build && yarn pack && mocha test/e2e",
-    "pack": "yarn pack:main && yarn pack:renderer",
-    "pack:main": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.main.config.js",
-    "pack:renderer": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.renderer.config.js",
-    "test": "yarn unit && yarn e2e",
-    "unit": "karma start test/unit/karma.conf.js"
-  },
-  "build": {
-    "productName": "electron-vue-typescript-starter",
-    "appId": "org.simulatedgreg.electron-vue",
-    "directories": {
-      "output": "build"
+    "name": "pat",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "serve": "vue-cli-service serve",
+        "build": "vue-cli-service build",
+        "lint": "vue-cli-service lint",
+        "electron:build": "vue-cli-service electron:build",
+        "electron:serve": "vue-cli-service electron:serve",
+        "postinstall": "electron-builder install-app-deps"
     },
-    "files": [
-      "dist/electron/**/*"
-    ],
-    "dmg": {
-      "contents": [
-        {
-          "x": 410,
-          "y": 150,
-          "type": "link",
-          "path": "/Applications"
-        },
-        {
-          "x": 130,
-          "y": 150,
-          "type": "file"
-        }
-      ]
+    "dependencies": {
+        "animate.css": "^3.7.0",
+        "axios": "^0.18.0",
+        "node-sass": "^4.11.0",
+        "vue": "^2.5.17",
+        "vue-flickity": "^1.1.2",
+        "vue-router": "^3.0.1",
+        "vuex": "^3.0.1"
     },
-    "mac": {
-      "icon": "build/icons/icon.icns"
+    "devDependencies": {
+        "@vue/cli-plugin-babel": "^3.0.0",
+        "@vue/cli-plugin-eslint": "^3.0.0",
+        "@vue/cli-service": "^3.0.0",
+        "babel-eslint": "^10.0.1",
+        "electron": "^2.0.0",
+        "eslint": "^5.8.0",
+        "eslint-plugin-vue": "^5.0.0-0",
+        "sass-loader": "^7.1.0",
+        "tailwindcss": "^0.7.0",
+        "vue-cli-plugin-electron-builder": "^1.0.0-rc.7",
+        "vue-template-compiler": "^2.5.17"
     },
-    "win": {
-      "icon": "build/icons/icon.ico"
-    },
-    "linux": {
-      "icon": "build/icons"
-    }
-  },
-  "dependencies": {
-    "axios": "^0.18.0",
-    "node-sass": "^4.10.0",
-    "sass-loader": "^7.1.0",
-    "vue": "^2.5.16",
-    "vue-class-component": "^6.3.2",
-    "vue-electron": "^1.0.6",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
-  },
-  "devDependencies": {
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-istanbul": "^5.1.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-register": "^6.24.1",
-    "babili-webpack-plugin": "^0.1.2",
-    "cfonts": "^2.3.0",
-    "chai": "^4.0.0",
-    "chalk": "^2.1.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^5.0.5",
-    "css-loader": "^1.0.1",
-    "del": "^3.0.0",
-    "devtron": "^1.4.0",
-    "electron": "^3.0.10",
-    "electron-builder": "^20.36.2",
-    "electron-debug": "^2.0.0",
-    "electron-devtools-installer": "^2.2.0",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^2.0.0",
-    "html-webpack-plugin": "^2.30.1",
-    "inject-loader": "^4.0.1",
-    "karma": "^3.1.1",
-    "karma-chai": "^0.1.0",
-    "karma-coverage": "^1.1.1",
-    "karma-electron": "^6.0.0",
-    "karma-mocha": "^1.2.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "^0.0.32",
-    "karma-webpack": "^3.0.5",
-    "mocha": "^5.2.0",
-    "multispinner": "^0.2.1",
-    "node-loader": "^0.6.0",
-    "require-dir": "^1.1.0",
-    "spectron": "^5.0.0",
-    "style-loader": "^0.23.1",
-    "tailwindcss": "^0.7.2",
-    "ts-loader": "^3.1.1",
-    "typescript": "^3.1.6",
-    "url-loader": "^1.1.2",
-    "vue-html-loader": "^1.2.4",
-    "vue-loader": "^13.0.5",
-    "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.4.2",
-    "webpack": "^3.5.2",
-    "webpack-dev-server": "^2.7.1",
-    "webpack-hot-middleware": "^2.18.2",
-    "webpack-merge": "^4.1.0"
-  }
+    "main": "background.js"
 }
